# tmsx-python

./: .gitignore  EXTRACTED_FROM.md  Makefile  README.md  codegen-config.yaml  pyproject.toml
.github/workflows/: consume-spec.yml  release.yml
examples/: canonical_flow.py  mcp-config-claude-code.json
src/tmsx/: __init__.py  exceptions.py
src/tmsx/_generated/: __init__.py  client.py  types.py
src/tmsx/_generated/models/: __init__.py  cancel_order_cancel_order_request.py  cancel_order_cancel_order_response.py  cancel_order_cancel_result.py  common_error.py  common_request_header.py  common_response_header.py  create_order_contact_info.py  create_order_create_order_request.py  create_order_create_order_response.py  create_order_order_info.py  create_order_pax_name.py  create_order_pax_room.py  hotel_detail_cancel_policy_info.py  hotel_detail_daily_price_info.py  hotel_detail_hotel.py  hotel_detail_hotel_detail_request.py  hotel_detail_hotel_detail_response.py  hotel_detail_meal_info.py  hotel_detail_pax_room_rq.py  hotel_detail_rate_info.py  hotel_detail_room_type.py  hotelstatic_hotel_info.py  hotelstatic_hotel_static_list_request.py  hotelstatic_hotel_static_list_response.py  hotelstatic_hotel_static_list_result.py  hotelstatic_image.py  hotelstatic_image_links.py  hotelstatic_link.py  hotelstatic_pagination.py  hotelstatic_pagination_rs.py  region_list_region.py  region_list_region_list_request.py  region_list_region_list_response.py  room_avail_hotel.py  (+21 more)
src/tmsx/hotel/: __init__.py  _client.py
src/tmsx_test_runner/: __init__.py  __main__.py  cli.py  path.py
(+9 files in other folders)
